<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.conferenceManagement</groupId>
    <artifactId>ConferenceManagement</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
<!--        hibernate here-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.20</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.4.24.Final</version>
        </dependency>

<!--        javafx here-->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>14</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>14</version>
        </dependency>

<!--        material design-->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>

<!--        fontaswsome javafx-->
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>4.7.0-9.1.2</version>
        </dependency>

    </dependencies>

<!--    build-->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <compilerArgs>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</arg>
<!--                        mine-->

                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</arg>
                        <arg>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</arg>
                        <arg>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</arg>
<!--                        mine-->

                        <arg>--illegal-access=warn</arg>

                        <arg>--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix</arg>
                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.reflect=com.jfoenix</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.1</version>
                <configuration>
                    <mainClass>com.conferenceManagement.App</mainClass>
                    <options>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>

                        <!--                        mine-->
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                        <!--                        mine-->

                        <option>--illegal-access=warn</option>

                        <option>--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix</option>
                        <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>